[tool.poetry]
name = "action-graph"
version = "0.0.0"
description = "Action Graph"
authors = ["Jérémie Basso <jeremie@lettria.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/MrEthic/action-graph"
repository = "https://github.com/MrEthic/action-graph"
documentation = "https://action-graph.readthedocs.io"
packages = [
    { include = "agraph" },
]
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/MrEthic/action-graph/releases"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"

pydantic = "^2.7.4"
[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py311"
